force-app/main/default/objects/ssot__PatientHealthCondition__dlm/fields/ssot__AbatementStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__AbatementStartDateTime__c</fullName>
    <label>Abatement Start DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AbatementStartDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>