force-app/main/default/objects/ssot__PatientHealthCondition__dlm/fields/ssot__AssertionSourceObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssertionSourceObject__c</fullName>
    <label>Assertion Source Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssertionSourceObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>