force-app/main/default/objects/ssot__PatientHealthCondition__dlm/fields/ssot__BodySiteId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BodySiteId__c</fullName>
    <label>Body Site</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BodySiteId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>