force-app/main/default/objects/ssot__PatientHealthCondition__dlm/fields/ssot__HealthConditionDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__HealthConditionDefinitionId__c</fullName>
    <label>Health Condition Definition</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HealthConditionDefinitionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>