force-app/main/default/objects/ssot__PatientHealthCondition__dlm/fields/ssot__HealthConditionSeverity__c.field-meta.xml
<CustomField>
    <fullName>ssot__HealthConditionSeverity__c</fullName>
    <label>Health Condition Severity</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HealthConditionSeverity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>