force-app/main/default/objects/ssot__PatientHealthCondition__dlm/fields/ssot__HealthConditionStageId__c.field-meta.xml
<CustomField>
    <fullName>ssot__HealthConditionStageId__c</fullName>
    <label>Health Condition Stage</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HealthConditionStageId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>