force-app/main/default/objects/ssot__PatientHealthCondition__dlm/fields/ssot__HealthConditionType__c.field-meta.xml
<CustomField>
    <fullName>ssot__HealthConditionType__c</fullName>
    <label>Health Condition Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HealthConditionType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>