force-app/main/default/objects/ssot__PatientHealthCondition__dlm/fields/ssot__OnsetEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__OnsetEndDateTime__c</fullName>
    <label>Onset End DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OnsetEndDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>