force-app/main/default/objects/ssot__PatientHealthCondition__dlm/fields/ssot__OnsetStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__OnsetStartDateTime__c</fullName>
    <label>Onset Start DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OnsetStartDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>