force-app/main/default/objects/ssot__PatientHealthCondition__dlm/fields/ssot__OriginalRecordCreationDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__OriginalRecordCreationDateTime__c</fullName>
    <label>Original Record Creation Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OriginalRecordCreationDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>