force-app/main/default/objects/ssot__PatientHealthCondition__dlm/fields/ssot__RecordCreatorObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecordCreatorObject__c</fullName>
    <label>Record Creator Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecordCreatorObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>