force-app/main/default/objects/ssot__PatientHealthCondition__dlm/fields/ssot__RecordCreatorReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecordCreatorReferenceId__c</fullName>
    <label>Record Creator Reference</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecordCreatorReferenceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>