force-app/main/default/objects/ssot__PatientHealthCondition__dlm/fields/ssot__rel_1716725652195_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716725652195_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PatientHealthCondition_RecordCreator_rel</label>
    <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
    <relationshipLabel>PatientHealthCondition_RecordCreator_rel</relationshipLabel>
    <relationshipName>rel_1716725652195_end</relationshipName>
    <type>Lookup</type>
</CustomField>