force-app/main/default/objects/ssot__PatientHealthCondition__dlm/fields/ssot__rel_1716725654885_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716725654885_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PatientHealthCondition_BodySiteId_ma_rel</label>
    <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
    <relationshipLabel>PatientHealthCondition_BodySiteId_ma_rel</relationshipLabel>
    <relationshipName>rel_1716725654885_end</relationshipName>
    <type>Lookup</type>
</CustomField>